[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/lawn_grids/main/Tooltip.gd" type="Script" id=1]
[ext_resource path="res://scenes/lawn_grids/main/pButton.gd" type="Script" id=2]
[ext_resource path="res://scenes/lawn_grids/main/seedProgress.gd" type="Script" id=3]
[ext_resource path="res://scenes/lawn_grids/main/Sprite_a.gd" type="Script" id=4]
[ext_resource path="res://resources/gui/seedpacket_selection.png" type="Texture" id=5]
[ext_resource path="res://resources/gui/tooltip.png" type="Texture" id=6]
[ext_resource path="res://resources/spriteFrames/psh_seedpacket_spriteframe.tres" type="SpriteFrames" id=7]

[node name="SeedPacket" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
toggle_mode = true
text = "peashooter"
flat = true
script = ExtResource( 2 )
seedpacket = "peashooter"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 7 )
centered = false

[node name="TextureProgressBar" type="TextureProgress" parent="."]
margin_right = 100.0
margin_bottom = 50.0
value = 100.0
texture_progress = ExtResource( 5 )
fill_mode = 1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
script = ExtResource( 4 )

[node name="PriceTag" type="Label" parent="."]
margin_left = 2.0
margin_top = 38.0
margin_right = 42.0
margin_bottom = 52.0
text = "100"

[node name="Node2D" type="Node2D" parent="."]

[node name="Tooltip" type="NinePatchRect" parent="Node2D"]
margin_right = 100.0
margin_bottom = 40.0
texture = ExtResource( 6 )
script = ExtResource( 1 )

[node name="PlantName" type="Label" parent="Node2D/Tooltip"]
margin_top = 4.0
margin_right = 100.0
margin_bottom = 18.0
text = "0"
align = 1
valign = 1

[node name="SunCost" type="Label" parent="Node2D/Tooltip"]
margin_top = 20.0
margin_right = 100.0
text = "0
"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="Node2D/Tooltip" method="_on_SeedPacket_mouse_entered"]
[connection signal="mouse_exited" from="." to="Node2D/Tooltip" method="_on_SeedPacket_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SeedPacket_pressed"]
[connection signal="toggled" from="." to="." method="_on_SeedPacket_toggled"]
